--- a/style.css
+++ b/style.css
@@ -5,57 +5,15 @@
   box-sizing: border-box;
 }
 
-/*
-  1. Use a more-intuitive box-sizing model.
-*/
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-
-/*
-  Typographic tweaks!
-  3. Add accessible line-height
-  4. Improve text rendering
-*/
 body {
-  line-height: 1;
-  -webkit-font-smoothing: antialiased;
-  font-size: 1rem;
   max-width: 100vw;
   width: 100%;
   margin: 0 auto;
+  padding: 10px;
   height: 100vh;
   display: flex;
   align-items: center;
   flex-direction: column;
-}
-
-input,
-button,
-textarea,
-select {
-  font: inherit;
-}
-/*
-  7. Avoid text overflows
-*/
-p,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  overflow-wrap: break-word;
-  margin-bottom: 20px;
-}
-/*
-  8. Create a root stacking context
-*/
-#root,
-#__next {
-  isolation: isolate;
 }
 
 .horizontal-flex {
@@ -91,7 +49,7 @@ form {
   cursor: pointer;
 }
 #generate-btn:hover {
-  box-shadow: 1px 1px 2px 2px rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 2px 12px 0px rgba(0, 0, 0, 0.5);
 }
 
 .btn-up,
@@ -129,7 +87,7 @@ form {
 input {
   width: 80%;
   padding: 10px;
-  margin: 15px auto;
+  margin: 5px auto;
   border-radius: 5px;
 }
 
@@ -140,11 +98,11 @@ input {
   height: 6rem;
   background-color: teal;
   position: relative;
-  bottom: -0.8rem;
+  bottom: -1rem;
   left: 1rem;
   overflow: hidden;
   border: 1px solid black;
-  margin-right: 1rem;
+  margin-right: 0.5rem;
 }
 .left-door {
   background: rgb(101, 103, 100);
@@ -159,19 +117,24 @@ input {
 .left-move-open {
   transform: translate(-100%);
   transition-duration: 2.5s;
-  transition-timing-function: ease-in;
+  /* transition-timing-function: ease-in; */
 }
 .right-move-open {
   transform: translate(100%);
   transition-duration: 2.5s;
-  transition-timing-function: ease-in;
+  /* transition-timing-function: ease-in; */
 }
-.right-move-close,
 .left-move-close {
   transform: translate(0%);
   transition-duration: 2.5s;
-  transition-timing-function: ease-in;
+  /* transition-timing-function: ease-in; */
 }
+.right-move-close {
+  transform: translate(0%);
+  transition-duration: 2.5s;
+  /* transition-timing-function: ease-in; */
+}
+/* styling of lift ends */
 
 @media (max-width: 475px) {
   h1 {
