--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,33 +1,39 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap");
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+}
+html,
+body {
+  font-size: 16px;
 }
 
 body {
   max-width: 100vw;
   width: 100%;
   margin: 0 auto;
-  padding: 10px;
-  height: 100vh;
+  height: auto;
   display: flex;
+  justify-content: center;
   align-items: center;
   flex-direction: column;
 }
 
+.floor-container {
+  width: 600px;
+  margin: 0 auto;
+}
+.input-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
 .horizontal-flex {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 1rem;
 }
-
-.lift-container {
-  width: 600px;
-  margin: 50px auto;
-}
-
 hr {
   width: 85%;
   border: 1px solid black;
@@ -36,37 +42,42 @@ hr {
 form {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  padding: 20px;
 }
-
+#home-page {
+  text-align: center;
+  padding: 10px;
+}
 #generate-btn {
-  width: 40%;
+  width: 55%;
   border-radius: 22px;
+  padding: 10px;
   border: none;
-  padding: 0.5rem;
   margin-top: 2rem;
-  font-weight: 600;
   cursor: pointer;
 }
 #generate-btn:hover {
-  box-shadow: 0px 2px 12px 0px rgba(0, 0, 0, 0.5);
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.4);
 }
-
 .btn-up,
 .btn-down {
   position: relative;
-  padding: 10px;
+  top: -1rem;
+  padding: 4px 10px;
+  width: 10%;
   background-color: cadetblue;
   border: none;
-  width: 4.5rem;
   color: #fff;
-  border-radius: 12px;
+  border-radius: 5px;
   margin-top: 2rem;
   cursor: pointer;
 }
-
 #btn-up-first {
   margin-top: 7.56rem;
+}
+
+.lift-container {
+  margin-top: 4rem;
 }
 
 .btn-container {
@@ -74,11 +85,9 @@ form {
   flex-direction: column;
   gap: 2rem;
 }
-
 .hidden {
   display: none;
 }
-
 .btn-up:disabled,
 .btn-down:disabled {
   color: brown;
@@ -87,7 +96,7 @@ form {
 input {
   width: 80%;
   padding: 10px;
-  margin: 5px auto;
+  margin: 10px;
   border-radius: 5px;
 }
 
@@ -103,6 +112,7 @@ input {
   overflow: hidden;
   border: 1px solid black;
   margin-right: 0.5rem;
+  margin-left: 2rem;
 }
 .left-door {
   background: rgb(101, 103, 100);
@@ -134,14 +144,13 @@ input {
   transition-duration: 2.5s;
   /* transition-timing-function: ease-in; */
 }
-/* styling of lift ends */
 
 @media (max-width: 475px) {
   h1 {
     font-size: 1rem;
     margin-bottom: 2rem;
   }
-  #floor-container {
+  .container {
     width: 350px;
     margin: 0 auto;
     min-width: 90%;
