--- a/src/css/style.css
+++ b/src/css/style.css
@@ -158,4 +158,14 @@ input {
   hr {
     width: 75%;
   }
+  .floor-container {
+    width: 350px;
+    margin: 0 auto;
+  }
+
+  .btn-up, .btn-down {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
